src/tests/cases/snapshots/bandwhich__tests__cases__ui__layout-under-50-width-under-50-height-draw_events.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
 Total Rate (Up / Down): 0.00B / 0.00B            
┌Utilization by process name─────────────────────┐
│Process                  Rate (Up / Down)       │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
┌Utilization by remote address───────────────────┐
│Remote Address               Rate (Up / Down)   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 Press <SPACE> to pause.                          

--- SECTION SEPARATOR ---
                                 98. 0B           
                                                  
                                                  
 5                        0.00B / 28.00B          
 4                        0.00B / 26.00B          
 1                        0.00B / 22.00B          
 2                        0.00B / 21.00B          
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
 3.3.3.3                      0.00B / 28.00B      
 2.2.2.2                      0.00B / 26.00B      
 1.1.1.1                      0.00B / 22.00B      
 4.4.4.4                      0.00B / 21.00B      
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  

